Sat Sep 21 00:29 2013 CDT
    * www/assets/js/util.js: support a "Nobody" permission level (set
      arbitrarily high)

Sat Sep 21 00:23 2013 CDT
    * www/assets/js/callbacks.js, www/assets/css/ytsync.css: make it more
      obvious which option was voted for

Sat Sep 21 00:08 2013 CDT
    * lib/playlist.js: Make .clean(filter) an instance method
    * lib/chatcommand.js: Make a few minor changes to unbibium's /clean

Wed Sep 18 18:26 2013 CDT
    * lib/user.js: Change channel checks to include checking for whether
      the channel is dead

Wed Sep 18 18:14 2013 CDT
    * lib/channel.js: Add a bunch of checks to prevent callbacks from doing
      things with a dead channel
    * tests/channelDeadRace.js: Add a few client tests that cause exceptions
      in the pre-patched channel code

Tue Sep 17 22:24 2013 CDT
    * lib/user.js: Fix what I assume was a race condition that caused an error message
      when a user's login callback fired after the channel unloaded.

Tue Sep 17 13:16 2013 CDT
    * lib/get-info.js: Fix ustream for channels that have /channel/ in the
      path.

Fri Sep 13 10:10 2013 CDT
    * www/reset.html: Fix data.js dependency
    * lib/api.js: Fix ActionLog trying to record wrong data.  How long has
      this been broken?
    * www/assets/js/acp.js: Prepend "/reset.html?" in case admins can't
      remember what the URL is

Thu Sep 12 18:41 2013 CDT
    * www/index.html: Fix index page not showing public channels

Thu Sep 12 16:25 2013 CDT
    * lib/channel.js: Fix an error resulting from calcVoteskipMax being run
      when the usercount is 0

Thu Sep 12 13:01 2013 CDT
    * lib/channel.js: Fix the XSS filter hack that allows style attributes
      to allow more than one in a chat filter replacement

Wed Sep 11 22:13 2013 CDT
    * lib/channel.js, lib/user.js: Remove "afkers" array, replace afkcount
      with a function that calculates how many users are eligible to
      voteskip (not AFK + have permission).  Check permission before