@@ -64,9 +64,11 @@
               <!-- chat container -->
               <div class="span5" id="chatwrap">
                 <!-- user count -->
-                <div id="usercountwrap" class="pointer">
-                  <i class="icon-chevron-up pull-left" id="userlisttoggle" title="Show/Hide Userlist"></i>
-                  <p id="usercount">Not connected</p>
+                <div id="usercountwrap">
+                  <i class="icon-chevron-up pull-left pointer" id="userlisttoggle" title="Show/Hide Userlist"></i>
+                  <span id="usercount" class="pointer">Not connected</span>
+                  <span id="adminflair" class="pull-right label label-default pointer" style="display: none">A</span>
+                  <span id="modflair" class="pull-right label label-default pointer" style="display: none">M</span>
                 </div>
                 <!-- userlist -->
                 <div id="userlist">
