@@ -1,3 +1,8 @@
+Sat Sep 21 02:21 2013 CDT
+    * www/assets/js/ui.js, www/assets/js/ui.js, www/assets/js/util.js,
+      www/channel.html, www/assets/css/ytsync.css: Add quick buttons for
+      modflair and adminflair
+
 Sat Sep 21 00:29 2013 CDT
     * www/assets/js/util.js: support a "Nobody" permission level (set
       arbitrarily high)
